# Corvia

./: .gitignore  README.md  corvia.toml.example  pyproject.toml
.claude/: settings.json
.claude/commands/: corvia.md
corvia_skill/: SKILL.md
corvia_skill/reference/: checkers.md  flags.md  output-format.md
example_toml/: corvia.toml.ds5  corvia.toml.ps5801
extensions/vscode-corvia/: .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode-corvia/src/: extension.ts
scripts/: setup_windows.ps1
src/corvia/: __init__.py  cli.py  engine.py  install.py  models.py  parser.py  registry.py
src/corvia/checkers/: base.py  buffer_overflow.py  dead_code.py  memory_leak.py  misra_bitfields.py  misra_control.py  misra_decl.py  misra_expr.py  misra_func.py  misra_identifiers.py  misra_init.py  misra_literals.py  misra_pointer.py  misra_pointer_conv.py  misra_preproc.py  misra_standard_lib.py  misra_switch.py  (+7 more)
src/covia/: __init__.py  cli.py  engine.py  models.py  parser.py  registry.py
temp/: x3_corvia_review.md
test_c_samples/: buffer_overflow.c  clean.c  dead_code.c  memory_leak.c  misra_bitfields.c  misra_decl.c  misra_expr.c  misra_identifiers.c  misra_init.c  misra_pointer.c  misra_types.c  misra_unions.c  misra_violations.c  null_deref.c  resource_leak.c  syntax.c  uninit_var.c  unused_var.c
tests/: conftest.py  test_cli.py  test_engine.py  test_parser.py  test_registry.py
tests/fixtures/: buffer_overflow.c  clean.c  dead_code.c  memory_leak.c  misra_bitfields.c  misra_control.c  misra_decl.c  misra_expr.c  misra_identifiers.c  misra_literals.c  misra_phase5.c  misra_pointer_conv.c  misra_standard_lib.c  misra_switch.c  misra_unions.c  null_deref.c  null_deref_cfg.c  resource_leak.c  syntax_issues.c  uninit_vars.c  unused_vars.c
tests/test_checkers/: test_buffer_overflow.py  test_cfg_null_deref.py  test_dead_code.py  test_fp_regressions.py  test_memory_leak.py  test_misra_bitfields.py  test_misra_control.py  test_misra_expr.py  test_misra_identifiers.py  test_misra_literals.py  test_misra_pointer_conv.py  test_misra_standard_lib.py  test_misra_switch.py  test_misra_unions.py  test_null_deref.py  test_phase5_extensions.py  test_pointer_null_and_intarith.py  test_resource_leak.py  test_syntax.py  test_uninit_vars.py  test_unused_vars.py
tests/test_core/: test_cache.py  test_call_graph.py  test_cfg.py  test_config.py  test_config_templates.py  test_inter_procedural.py  test_summary.py  test_symbol_export.py  test_symbol_table.py
tests/test_lsp/: test_converter.py  test_server.py
tests/test_reporters/: test_json_reporter.py  test_md_reporter.py
(+14607 files in other folders)
