[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covia"
version = "0.1.0"
description = "COVIA - C language static analysis tool with MISRA C:2012 support"
requires-python = ">=3.9"
dependencies = [
    "pycparser>=2.21",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
lsp = [
    "pygls>=1.3.0",
    "lsprotocol>=2024.0.0",
]

[project.scripts]
covia = "covia.cli:main"
covia-lsp = "covia.lsp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
