[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corvia"
version = "0.2.0"
description = "CORVIA - C language static analysis tool with MISRA C:2012 support"
requires-python = ">=3.9"
dependencies = [
    "pycparser>=2.21",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]
lsp = [
    "pygls>=1.3.0",
    "lsprotocol>=2024.0.0",
]
cpp = [
    "wmi; sys_platform == 'win32'",
]

[project.scripts]
corvia = "corvia.cli:main"
corvia-lsp = "corvia.lsp.server:main"
corvia-install-cpp = "corvia.install:install_cpp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
