[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corvia"
version = "0.5.4"
description = "CORVIA - C language static analysis tool with MISRA C:2012 support"
requires-python = ">=3.9"
dependencies = [
    "pycparser>=2.21",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]
lsp = [
    "pygls>=1.3.0",
    "lsprotocol>=2024.0.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
corvia = "corvia.cli:main"
corvia-lsp = "corvia.lsp.server:main"
corvia-install-cpp = "corvia.install:install_cpp"
corvia-mcp = "corvia.mcp.server:main"
corvia-graph = "corvia.utils.symbols_to_dot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
corvia = ["example_toml/*", "utils/fake_libc_include/*.h"]

[tool.pytest.ini_options]
testpaths = ["tests"]
